unpackaged/main/default/objects/litify_fin__lit_Criteria__c/litify_fin__lit_Criteria__c.object-meta.xml
<CustomObject>
    <description>Represents a criteria for a Financial Summary Setup.</description>
    <label>Criteria</label>
    <nameField>
        <label>Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>