unpackaged/main/default/objects/litify_fin__lit_Criteria__c/fields/litify_fin__lit_Field__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Field__c</fullName>
    <description>The field on the master object to which this criteria refers.</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>