unpackaged/main/default/objects/litify_fin__lit_Criteria__c/fields/litify_fin__lit_Financials_Summary_Setup__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Financials_Summary_Setup__c</fullName>
    <description>The financial summary setup record this criteria is for.</description>
    <label>Financial Summary Setup</label>
    <referenceTo>litify_fin__lit_Financials_Summary_Setup__c</referenceTo>
    <relationshipLabel>Criteria</relationshipLabel>
    <relationshipName>Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>