unpackaged/main/default/objects/litify_fin__lit_Criteria__c/fields/litify_fin__lit_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Value__c</fullName>
    <description>The value the specified field is compared to. If the field on the master record is equal to the value specified in this field, the criteria is considered fulfilled.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>